add writing images, s, some copy and styling

--- a/home.html
+++ b/home.html
@@ -1,11 +1,4 @@
-<div>
-  <h1>Heather Stone | Portfolio</h1>
-  <a ui-sref=".code">Code</a>
-  <a ui-sref=".science">Science</a>
-  <a ui-sref=".writing">Writing</a>
-  <a ui-sref=".illustrations">Illustrations</a>
-  <br>
-  <a href=“/images/yourResume.pdf” download>Download my resume here!</a>
- </div>
- <div ui-view>
- </div>
+<p>Hi! I'm Heather, a full stack web developer based in Denver, CO.</p>
+<a href=“/images/yourResume.pdf” download>Download my resume here</a>
+<div ui-view>
+</div>
