--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Heather Stone | Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Asap|Flamenco" rel="stylesheet">
   </head>
   <body>
+    <header>
+      <h1>Heather Stone | Portfolio</h1>
+      <div>
+        <div>
+          <a ui-sref=".home">Home</a>
+          <a ui-sref=".home.code">Code</a>
+          <a ui-sref=".home.science">Science</a>
+          <a ui-sref=".home.writing">Writing</a>
+          <a ui-sref=".home.illustrations">Illustrations</a>
+        </div>
+        <div id="headerBar"></div>
+      </div>
+    </header>
     <div class="container">
       <div ui-view></div>
     </div>
@@ -14,5 +29,14 @@
      <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js" charset="utf-8"></script>
      <script src="js/app.js" charset="utf-8"></script>
      <script src="js/controllers/Home.controller.js" charset="utf-8"></script>
+     <footer>
+       <div class="social-icons">
+         <a href="https://www.linkedin.com/in/heatherblairs"><img src="images/linkedin.png"></a>
+         <a href="https://www.facebook.com/yakfactorial"><img src="images/facebook.png"></a>
+         <a href="https://github.com/heatherblairs"><img src="images/github.png"></a>
+         <a href="mailto:heather.blair.stone@gmail.com"><img src="images/mail.png"></a>
+         <a href="https://twitter.com/heatherblairs"><img src="images/twitter.png"></a>
+       </div>
+     </footer>
   </body>
 </html>
