--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Asap|Flamenco" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header></header>
+    <section class="overlay">
       <h1>Heather Stone | Portfolio</h1>
       <div>
         <div>
@@ -19,7 +20,7 @@
         </div>
         <div id="headerBar"></div>
       </div>
-    </header>
+    </section>
     <div class="container">
       <div ui-view></div>
     </div>
