change homepage design

--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<p>Hi! I'm Heather, a full stack web developer based in Denver, CO.</p>
-<a href=“/images/yourResume.pdf” download>Download my resume here</a>
+<img src="/images/frogfriend2.jpg" class="frogfriend"/>
 <div ui-view>
 </div>
+<!-- <a href=“/images/yourResume.pdf” download>Download my resume here</a> -->
