add illustration, more content, some jquery

--- a/html/illustrations.html
+++ b/html/illustrations.html
@@ -1,2 +1,3 @@
 <img src="images/zunzun.jpg" height="400px">
 <img src="images/sfb.jpg" height="400px">
+<img src="images/savepollinators.jpg" height="400px">
