--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header></header>
-    <section>
+    <section class="generalContent">
       <h1>Heather Stone | Portfolio</h1>
       <div>
         <a ui-sref=".home">
@@ -31,6 +31,18 @@
         <div ui-view></div>
       </div>
     </section>
+    <footer>
+      <h3 id="contact">
+        <a href="#contact">Contact Me</a>
+      </h3>
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/heatherblairs"><img src="images/social-icons/linkedin.png"/></a>
+        <a href="https://www.facebook.com/yakfactorial"><img src="images/social-icons/facebook.png"/></a>
+        <a href="https://github.com/heatherblairs"><img src="images/social-icons/github.png"/></a>
+        <a href="mailto:heather.blair.stone@gmail.com"><img src="images/social-icons/mail.png"/></a>
+        <a href="https://twitter.com/heatherblairs"><img src="images/social-icons/twitter.png"/></a>
+      </div>
+    </footer>
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js" charset="utf-8"></script>
@@ -38,15 +50,5 @@
      <script src="js/app.js" charset="utf-8"></script>
      <script src="js/controllers/Home.controller.js" charset="utf-8"></script>
      <script src="js/query.js" charset="utf-8"></script>
-     <footer>
-       <h3 id="contact">Contact Me</h3>
-       <div class="social-icons">
-         <a href="https://www.linkedin.com/in/heatherblairs"><img src="images/social-icons/linkedin.png"></a>
-         <a href="https://www.facebook.com/yakfactorial"><img src="images/social-icons/facebook.png"></a>
-         <a href="https://github.com/heatherblairs"><img src="images/social-icons/github.png"></a>
-         <a href="mailto:heather.blair.stone@gmail.com"><img src="images/social-icons/mail.png"></a>
-         <a href="https://twitter.com/heatherblairs"><img src="images/social-icons/twitter.png"></a>
-       </div>
-     </footer>
   </body>
 </html>
