add publication links and logos, add bottom margins to link logos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <section class="generalContent">
       <h1>Heather Stone | Portfolio</h1>
-      <div>
+      <div class="navLinks">
         <a ui-sref=".home">
           <img src="images/links/home.png" class="links" alt="homepage link">
         </a>
@@ -35,7 +35,7 @@
       <h3 id="contact">
         <a href="#contact">Contact Me</a>
       </h3>
-      <div class="social-icons">
+      <div class="socialIcons">
         <a href="https://www.linkedin.com/in/heatherblairs"><img src="images/social-icons/linkedin.png"/></a>
         <a href="https://www.facebook.com/yakfactorial"><img src="images/social-icons/facebook.png"/></a>
         <a href="https://github.com/heatherblairs"><img src="images/social-icons/github.png"/></a>
