--- a/home.html
+++ b/home.html
@@ -1,3 +1,3 @@
 <div ui-view>
-  <img src="/images/frogfriend2.jpg" class="frogfriend"/>
+  <!-- <img src="/images/frogfriend2.jpg" class="frogfriend"/> -->
 </div>
