break some things

--- a/html/illustrations.html
+++ b/html/illustrations.html
@@ -1,3 +1,4 @@
 <img src="images/zunzun.jpg" height="400px">
 <img src="images/sfb.jpg" height="400px">
 <img src="images/savepollinators.jpg" height="400px">
+<img src="images/snug.jpg" height="400px">
