--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <header></header>
     <section class="generalContent">
       <h1>Heather Stone | Portfolio</h1>
-      <div class="navLinks">
-        <a ui-sref=".home">
+      <div class="navLinks" bs-active-link>
+        <a href="/home">
           <img src="images/links/home.png" class="links" alt="homepage link">
         </a>
-        <a ui-sref=".home.code">
+        <a href="/code">
           <img src="images/links/code.png" class="links" alt="link to code portfolio page">
         </a>
-        <a ui-sref=".home.science">
+        <a href="/science">
           <img src="images/links/science.png" class="links" alt="link to science page">
         </a>
-        <a ui-sref=".home.writing">
+        <a href="/writing">
           <img src="images/links/writing.png" class="links" alt="link to writing page">
         </a>
-        <a ui-sref=".home.illustrations">
+        <a href="/illustrations">
           <img src="images/links/illustrations.png" class="links" alt="link to illustrations page">
         </a>
       </div>
@@ -48,7 +48,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js" charset="utf-8"></script>
      <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js" charset="utf-8"></script>
      <script src="js/app.js" charset="utf-8"></script>
-     <script src="js/controllers/Home.controller.js" charset="utf-8"></script>
+     <script src="js/controllers/mainController.js" charset="utf-8"></script>
      <script src="js/query.js" charset="utf-8"></script>
   </body>
 </html>
