--- a/html/writing.html
+++ b/html/writing.html
@@ -1,3 +1,4 @@
+<p>My writing has been published everywhere from Lifehacker to poetry magazines to scientific journals. Check out some of my original work on the website I co-founded below.</p>
 <section class="writingImages">
   <a href="http://www.friedmagazine.com/science/the-lesser-of-two-evils-the-future-of-worlds-oil-supply/">
     <img src="/images/friedbiofuel.png" height="300px" width="auto">
